# slaif-asr-slovenian

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SCAFFOLD-MANIFEST.txt  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
configs/: README.md
data/: README.md
docs/: architecture.md  baseline-inference.md  data-policy.md  data-quality-validator.md  evaluation-datasets.md  evaluation-protocol.md  project-handoff.md  release-policy.md  roadmap.md  testing-strategy.md  third-party-licenses.md  training-data-constitution.md  training-plan.md
models/: README.md
requirements/: gams-generator.txt  nemotron-training-cu126.txt  piper-tts-gpu.txt  runtime-cu126-constraints.txt  runtime-cu126.txt  supertonic3.txt
runs/: README.md
scripts/: README.md  admit_reviewed_corpus_v2.py  audit_slovenian_tokenizer.py  augment_s6tts_scale2000_view.py  authorize_corpus_v2_diagnostic_training.py  authorize_corpus_v2_joint_adapter_diagnostic.py  authorize_corpus_v2_scoring.py  authorize_corpus_v2_speaker_range_diagnostic.py  authorize_supertonic3_multivoice_diagnostic.py  build_artur_controller_dev.py  build_corpus_v2_selected_training.py  build_corpus_v2_speaker_range_augmentations.py  build_fleurs_real_gate.py  build_protected_text_index.py  build_real_evaluation_gates.py  build_s6tts_engine.py  check_repository.py  download_nemotron_checkpoint.py  download_piper_sl_voice.py  download_supertonic3_assets.py  evaluate_active_prompt_round.py  evaluate_prompt_column_experiment.py  (+61 more)
(+342 files in other folders)
