[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slaif-asr-slovenian"
version = "0.1.0"
description = "SLAIF Slovenian ASR runtime-contract and baseline inference tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["slaif_asr*"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
testpaths = [
  "tests",
]
norecursedirs = [
  ".git",
  ".external",
  ".venv",
  ".venv-gams",
  ".venv-piper",
  ".venv-supertonic",
  "codex-session-backups",
  "models",
  "runs",
  "runs-move-logs",
  "runs-tar-staging",
]
